--- a/settings/solr.ini
+++ b/settings/solr.ini
@@ -39,9 +39,13 @@ SearchServerUserPass=
 #Shards mapping, can be to multicores in one servlet or even a crosss servers
 #typical use is multilingual setups, but also for external index support
 #the keys are used as shorthands in template functions
+
 Shards[]
 #Shards[eng-GB]=http://localhost:8983/solr/eng-GB
 #Shards[fre-FR]=http://localhost:8983/solr/fre-FR
 #Shards[nor-NO]=http://localhost:8983/solr/nor-NO
 #Shards[myforeignindex]=http://myotherhost:8983/solr
 
+[Elevate]
+SyncMethod[name]=ezfElevateSimpleFileSync
+SyncMethod[base_dir]=/tmp
